// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityLikeComponent should display as liked if LikedByCurrentUser === true 1`] = `
<pf-community-like
  LikedByCurrentUser={[Function Boolean]}
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn-clicked"
    id="like-reply"
    ng-reflect-klass="community-like p-0 "
    ng-reflect-ng-class="community-btn-clicked"
    placement="auto"
  >
    
    <span>
      <i
        class="fas fa-heart icon"
      />
    </span>
    
    <span>
        Like
    </span>
  </span>
</pf-community-like>
`;

exports[`CommunityLikeComponent should display as not liked if LikedByCurrentUser === false 1`] = `
<pf-community-like
  LikedByCurrentUser="false"
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn"
    id="like-reply"
    ng-reflect-klass="community-like p-0 "
    ng-reflect-ng-class="community-btn"
    placement="auto"
  >
    
    
    <span>
      <i
        class="far fa-heart icon"
      />
    </span>
    <span>
        Like
    </span>
  </span>
</pf-community-like>
`;

exports[`CommunityLikeComponent should show like component 1`] = `
<pf-community-like
  MAX_LIKES_TO_DISPLAY={[Function Number]}
  communityLikeLoadedSubscription={[Function Subscriber]}
  communityLikeLoadingSubscription={[Function Subscriber]}
  communityLikeUserInfos={[Function Array]}
  communityLikes$={[Function Store]}
  communityLikesLoading$={[Function Store]}
  loadingLikes="false"
  store={[Function Store]}
>
  <span
    class="community-like p-0 community-btn"
    id="like-reply"
    ng-reflect-klass="community-like p-0 "
    ng-reflect-ng-class="community-btn"
    placement="auto"
  >
    
    
    <span>
      <i
        class="far fa-heart icon"
      />
    </span>
    <span>
        Like
    </span>
  </span>
</pf-community-like>
`;
